Using Angular material 2 components in playground .

--- a/playground/index.html
+++ b/playground/index.html
@@ -8,6 +8,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://rawgit.com/angular/material2-builds/master/prebuilt-themes/indigo-pink.css" 
+  rel="stylesheet">
 </head>
 <body>
   <app-root>Loading Ng Masonry Grid...</app-root>
